Completed CustomActions.cs and implemented some of QueryAPI.cs.
Hopefully done with CustomActions.cs.

Implemented RequestJSON, Credentials, and QueryAPIException in
QueryAPI.cs. Also implemented IDisposable on IQueryAPI and added some
documentation on the mentioned methods.

Included JSON.NET packages in the UDDNSQuery project. Will eventually
remove them from the UnofficialDDNS project.

--- a/UDDNSQuery/Errors.resx
+++ b/UDDNSQuery/Errors.resx
@@ -129,4 +129,16 @@
     <value>Domain name field is empty.</value>
     <comment>Used by the installer.</comment>
   </data>
+  <data name="Error200" xml:space="preserve">
+    <value>API responded with non-200 HTTP code.</value>
+    <comment>QueryAPI.RequestJSON</comment>
+  </data>
+  <data name="Error201" xml:space="preserve">
+    <value>Got exception while querying API.</value>
+    <comment>QueryAPI.RequestJSON</comment>
+  </data>
+  <data name="Error202" xml:space="preserve">
+    <value>Invalid JSON from API.</value>
+    <comment>QueryAPI.RequestJSON</comment>
+  </data>
 </root>
