Implemented most of QueryAPIName.
Documented methods in IQueryAPI.

Implemented GetCurrentIP, Authenticate, GetRecords, and Logout.
Authentication works in installer but error messages need clearing up.

--- a/UDDNSQuery/Errors.resx
+++ b/UDDNSQuery/Errors.resx
@@ -141,4 +141,80 @@
     <value>Invalid JSON from API.</value>
     <comment>QueryAPI.RequestJSON</comment>
   </data>
+  <data name="Error300" xml:space="preserve">
+    <value>Missing result code and/or message in JSON from API.</value>
+    <comment>QueryAPIName.GetCurrentIP</comment>
+  </data>
+  <data name="Error301" xml:space="preserve">
+    <value>API responded with non-100 API code. Message:</value>
+    <comment>QueryAPIName.GetCurrentIP</comment>
+  </data>
+  <data name="Error302" xml:space="preserve">
+    <value>Invalid JSON from API, missing client_ip.</value>
+    <comment>QueryAPIName.GetCurrentIP</comment>
+  </data>
+  <data name="Error303" xml:space="preserve">
+    <value>API did not provide a valid IP address.</value>
+    <comment>QueryAPIName.GetCurrentIP</comment>
+  </data>
+  <data name="Error400" xml:space="preserve">
+    <value>Missing result code and/or message in JSON from API.</value>
+    <comment>QueryAPIName.Authenticate</comment>
+  </data>
+  <data name="Error401" xml:space="preserve">
+    <value>API responded with non-100 API code. Message:</value>
+    <comment>QueryAPIName.Authenticate</comment>
+  </data>
+  <data name="Error402" xml:space="preserve">
+    <value>Invalid JSON from API, missing session_token.</value>
+    <comment>QueryAPIName.Authenticate</comment>
+  </data>
+  <data name="Error403" xml:space="preserve">
+    <value>API did not provide a valid session token.</value>
+    <comment>QueryAPIName.Authenticate</comment>
+  </data>
+  <data name="Error500" xml:space="preserve">
+    <value>GetPriDomain: Missing result code and/or message in JSON from API.</value>
+    <comment>QueryAPIName</comment>
+  </data>
+  <data name="Error501" xml:space="preserve">
+    <value>GetPriDomain: API responded with non-100 API code. Message:</value>
+    <comment>QueryAPIName</comment>
+  </data>
+  <data name="Error502" xml:space="preserve">
+    <value>GetPriDomain: Found no domains associated with account.</value>
+    <comment>QueryAPIName</comment>
+  </data>
+  <data name="Error503" xml:space="preserve">
+    <value>GetPriDomain: No access to the domain.</value>
+    <comment>QueryAPIName</comment>
+  </data>
+  <data name="Error600" xml:space="preserve">
+    <value>Missing result code and/or message in JSON from API.</value>
+    <comment>QueryAPIName.GetRecords</comment>
+  </data>
+  <data name="Error601" xml:space="preserve">
+    <value>API responded with non-100 API code. Message:</value>
+    <comment>QueryAPIName.GetRecords</comment>
+  </data>
+  <data name="Error700" xml:space="preserve">
+    <value>UpdateDNSRecord (delete): Missing result code and/or message in JSON from API.</value>
+    <comment>QueryAPIName</comment>
+  </data>
+  <data name="Error701" xml:space="preserve">
+    <value>UpdateDNSRecord (delete): API responded with non-100 API code. Message:</value>
+    <comment>QueryAPIName</comment>
+  </data>
+  <data name="Error702" xml:space="preserve">
+    <value>UpdateDNSRecord (create): Missing result code and/or message in JSON from API.</value>
+    <comment>QueryAPIName</comment>
+  </data>
+  <data name="Error703" xml:space="preserve">
+    <value>UpdateDNSRecord (create): API responded with non-100 API code. Message:</value>
+    <comment>QueryAPIName</comment>
+  </data>
+  <data name="Error704" xml:space="preserve">
+    <value>UpdateDNSRecord: Updated domain record with the public IP address.</value>
+    <comment>QueryAPIName</comment>
+  </data>
 </root>
