Got TaskDialogIndirect working properly.
After almost 2 weeks of research and condensing the Windows API Code
Pack I finally got the exact dialog I want working!

Changes:
1) Added TaskDialog.cs which is a condensed version of the Windows API
Code Pack (Vista Bridge) minimized to my very specific use case.
2) Put the StatusDialog in a delegated thread like I did with MessageBox
to avoid any delays with the UI.
3) Tweaked EnableThemingInScope according to the VS2012 code analyzer.
During testing of TaskDialog I ran into an exception with
DeactivateActCtx so I threw in a try/catch to quickly fix it without
really understanding the exception. Sorry I didn't save the exception.
4) Pretty much re-write StatusDialog.cs to use the new TaskDialog.cs.

--- a/UDDNSQuery/Strings.resx
+++ b/UDDNSQuery/Strings.resx
@@ -121,6 +121,26 @@
     <value>Empty Field</value>
     <comment>MessageBox title.</comment>
   </data>
+  <data name="StatusDialogHeading" xml:space="preserve">
+    <value>Please wait while your settings are validated</value>
+    <comment>TaskDialog heading.</comment>
+  </data>
+  <data name="StatusDialogHeadingError" xml:space="preserve">
+    <value>An error has occurred during validation</value>
+    <comment>TaskDialog heading during an error.</comment>
+  </data>
+  <data name="StatusDialogTextAuth" xml:space="preserve">
+    <value>Authenticating...</value>
+  </data>
+  <data name="StatusDialogTextDomain" xml:space="preserve">
+    <value>Validating domain...</value>
+  </data>
+  <data name="StatusDialogTextLogout" xml:space="preserve">
+    <value>Logging out...</value>
+  </data>
+  <data name="StatusDialogTextRecords" xml:space="preserve">
+    <value>Getting records...</value>
+  </data>
   <data name="StatusDialogTitle" xml:space="preserve">
     <value>UDDNS Validation</value>
     <comment>TaskDialog title.</comment>
