--- a/UDDNSQuery/Strings.resx
+++ b/UDDNSQuery/Strings.resx
@@ -129,6 +129,10 @@
     <value>An error has occurred during validation</value>
     <comment>TaskDialog heading during an error.</comment>
   </data>
+  <data name="StatusDialogMoreInfo" xml:space="preserve">
+    <value>More information about this error: &lt;a href="{0}"&gt;UnofficialDDNS Wiki&lt;/a&gt;</value>
+    <comment>StatusDialog.cs</comment>
+  </data>
   <data name="StatusDialogTextAuth" xml:space="preserve">
     <value>Authenticating...</value>
   </data>
