New cancel dialog.
Replaced the ugly WIX cancel dialog with a TaskDialog. This required
changing the Cancel button control on all dialogs in the installer.
I also wanted an icon so this commit includes added icon support to
TaskDialog.cs. Since I was adding icon support I went ahead and added an
error icon to the StatusDialog.

Localized the LICENSE file.

--- a/UDDNSQuery/Strings.resx
+++ b/UDDNSQuery/Strings.resx
@@ -130,7 +130,7 @@
     <comment>TaskDialog heading during an error.</comment>
   </data>
   <data name="StatusDialogMoreInfo" xml:space="preserve">
-    <value>More information about this error: &lt;a href="{0}"&gt;UnofficialDDNS Wiki&lt;/a&gt;</value>
+    <value>More information: &lt;a href="{0}"&gt;UnofficialDDNS Wiki&lt;/a&gt;</value>
     <comment>StatusDialog.cs</comment>
   </data>
   <data name="StatusDialogTextAuth" xml:space="preserve">
