Fixed empty string validation.
String validation is now done before the service thread starts (in
OnStart in the service which throws an exception and stops the service
from starting) and before the StatusDialog in the installer (will show
an error dialog instead of the StatusDialog).

Properly handles invalid/unsupported registrars in the installer and the
service.

Improved LogSingleton.

--- a/UDDNSQuery/Errors.resx
+++ b/UDDNSQuery/Errors.resx
@@ -129,6 +129,14 @@
     <value>Domain name field is empty.</value>
     <comment>Used by the installer.</comment>
   </data>
+  <data name="Error103" xml:space="preserve">
+    <value>Registrar field is empty.</value>
+    <comment>Used by the installer.</comment>
+  </data>
+  <data name="Error104" xml:space="preserve">
+    <value>Registrar is not supported.</value>
+    <comment>QueryAPI</comment>
+  </data>
   <data name="Error200" xml:space="preserve">
     <value>API responded with non-200 HTTP code.</value>
     <comment>QueryAPI.RequestJSON</comment>
